--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@iconify-json/mdi": "^1.1.63",
     "astro": "^4.0.7",
     "astro-feather-icons": "^1.0.2",
+    "astro-integration-lottie": "^0.2.3",
+    "lottie-web": "^5.12.2",
     "simple-icons-astro": "^10.4.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
